# meetup

./: .gitignore  README.md
meetup/client/: Dockerfile  package-lock.json  package.json  tailwind.config.js
meetup/client/public/: index.html
meetup/client/src/: consts.ts  index.tsx  types.ts  urls.tsx
meetup/client/src/api/: API.ts  responses.ts
meetup/client/src/components/auth_form/: ButtonElement.tsx  InputElement.tsx  InviteBanner.tsx  LoginForm.tsx  (+1 more)
meetup/client/src/pages/: Login.tsx  PersonalCabinet.tsx  Registration.tsx  Root.tsx
meetup/client/src/redux/: store.ts
meetup/server/: app.Dockerfile  celery_worker.Dockerfile  config.py  pyproject.toml  telegram_bot.Dockerfile  utils.py
meetup/server/app/: config.py  main.py
meetup/server/app/services/: __init__.py  responses.py  utils.py
meetup/server/app/services/auth/: api.py  config.py  dependencies.py  hasher.py  utils.py
meetup/server/app/services/meets/: api.py  forms.py  responses.py  schemas.py  signals.py
meetup/server/app/services/users/: api.py  forms.py  responses.py  schemas.py
meetup/server/database/: __init__.py  config.py  utils.py
meetup/server/database/meets/: crud.py  exceptions.py  models.py  query.py
meetup/server/database/migrations/models/: 1_20230602174403_None.py
meetup/server/database/users/: crud.py  exceptions.py  models.py  query.py
meetup/server/scheduler/: celery.py  utils.py
meetup/server/scheduler/tasks/: telegram_bot_tasks.py
meetup/server/telegram_bot/: commands.py  config.py  main.py
meetup/server/telegram_bot/app/: dependencies.py  main.py  utils.py  webhooks.py
(+11 files in other folders)
